fix dish-row width to prevent overlap and overflow

--- a/EricaOne/static/EricaOne/recipes.css
+++ b/EricaOne/static/EricaOne/recipes.css
@@ -95,15 +95,16 @@
 }
 
 .dish-row {
+    width: 100%;
     height: 50vh;
-    white-space: nowrap;
+    display: flex;
     overflow-x: auto;
+    white-space: nowrap;
     background-color: #0000000c;
 }
 
 .dish-column {
     height: 100%;
-    display: inline-block;
 }
 
 .dish-card {
